--- a/hw_2/Practice task 2, Back propagation for MNIST.ipynb
+++ b/hw_2/Practice task 2, Back propagation for MNIST.ipynb
@@ -789,23 +789,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как видно из графиков функции потерь и точности для различных функций активации, нелинейность оказывает сильное влияние на сходимость функции, как видно из графика сигмоида хуже всех справляется с задачей, как с точки зрения качества, так и скорости. ReLU, ELU, TANH справляются с задачей примернор одинаково хорошо. Стоит отметить, что на первых эпохах ELU ведет себя немного хуже, точность равна 37% в конце 1-ой эпохи. В то время как для функции tanh, точность составляет 85% в конце 1-ой эпохи"
+    "Как видно из графиков функции потерь и точности для различных функций активации, нелинейность оказывает сильное влияние на сходимость функции, как видно из графика сигмоида хуже всех справляется с задачей, как с точки зрения качества, так и скорости. ReLU, ELU, TANH справляются с задачей примернор одинаково хорошо. Стоит отметить, что на первых эпохах ELU ведет себя немного хуже, точность равна 37% в конце 1-ой эпохи. В то время как для функции tanh, точность составляет 85% в конце 1-ой эпохи."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Аугментация замедляет скорость сходимость функции, так как данные меняются, за счет аугментация. На каждой эпохе каждое изображение представляется  по-разному, за счет аугментаций. Это видно по графику так как функция потерь меньше на тесте, чем на тренировочной выборке (Одна из причин отсутствие аугментаций на тестовой выборке).\n",
+    "Аугментация замедляет скорость сходимость функции, так как данные меняются, за счет аугментации. На каждой эпохе каждое изображение представляется  по-разному, за счет аугментаций. Это видно по графику так как функция потерь меньше на тесте, чем на тренировочной выборке (Одна из причин отсутствие аугментаций на тестовой выборке).\n",
     "При использовании всех аугментаций качество повысилось на более чем 1%, по сравнению с тем, когда аугментация не использовалась."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
